correct: 1) add sequences in code and db 2) add @Component 3) started inserting data into db failing on 'Executing an update/delete query'